# cpp-msg-broker

./: .gitignore  README.md  mainwindow.cpp  mainwindow.h
client/: CMakeLists.txt
client/proto-files/: message.proto
client/src/: main.cpp  utils.cpp
qt-client-gui/: CMakeLists.txt
qt-client-gui/src/: cfg.ini  client.cpp  client.h  connect-layout.cpp  connect-layout.h  connect-widget.cpp  connect-widget.h  main-cl.cpp  main-layout.cpp  main-layout.h  main-widget.cpp  main-widget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings-dialog.cpp  settings-dialog.h  test-oop-main.cpp  utils.cpp  utils.hpp
qt-ui/: CMakeLists.txt  mainwindow.h
server/: CMakeLists.txt
server/src/: cfg.ini  main.cpp  server.cpp  server.hpp  utils.cpp  utils.hpp
server/test/: CMakeLists.txt  server-tests.cpp
